[package]
name = "json_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.18", features = ["derive"] }
pest = "2.1.3"
pest_derive = "2.1.0"
simd-json = "0.5.0"
thiserror = "1.0.31"
